Rename:  EUID App UI - assets 및 js 폴더 구조 변경
원활한 js 작업을 위한 assets 및 js 폴더 구조 동기화

fixes: 추후 리팩토링 및 폴더, 파일명 변경 수정 소요 있을 수 있음

--- a/client/views/main/exchange.html
+++ b/client/views/main/exchange.html
@@ -23,19 +23,19 @@
         <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">수신감도</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
             ></span>
             <span class="sr-only">데이터 종류</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">배터리 잔량</span>
           </li>
@@ -49,7 +49,7 @@
             for="headerSelect"
             class="absolute w-4/5 z-[-1] text-lg font-bold py-2 top-[0.1875rem]"
             >남가좌제2동<span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[0.3125rem]"
             ></span></label
           ><select
             id="headerSelect"
@@ -67,7 +67,7 @@
         <ul class="flex w-[86px] h-[26px] justify-evenly mt-3">
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[0.3125rem] mt-1"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[0.3125rem] mt-1"
               href="./search.html"
               aria-label="검색"
               tabindex="0"
@@ -75,7 +75,7 @@
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/hamburger.svg')] bg-no-repeat w-5 h-5 ml-[0.1875rem] mt-0.5"
+              class="inline-block bg-[url('./../../assets/icons/main_hamburger.svg')] bg-no-repeat w-5 h-5 ml-[0.1875rem] mt-0.5"
               href="#"
               aria-label="메뉴"
               tabindex="0"
@@ -83,7 +83,7 @@
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[0.3125rem] mt-1"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[0.3125rem] mt-1"
               href=""
               aria-label="알림"
               tabindex="0"
@@ -106,7 +106,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[0px_-74px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[0px_-74px]"
             ></span>
             <span>홈</span>
           </a>
@@ -117,7 +117,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-72px_-46px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-72px_-46px]"
             ></span>
             <span>게시판</span>
           </a>
@@ -128,7 +128,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-106px_-91px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-106px_-91px]"
             ></span>
             <span>내 근처</span>
           </a>
@@ -139,7 +139,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-51px_-73px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-51px_-73px]"
             ></span>
             <span>채팅</span>
           </a>
@@ -150,7 +150,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-99px_-46px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-99px_-46px]"
             ></span>
             <span>나의 이름</span>
           </a>
@@ -209,7 +209,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -244,7 +244,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -279,7 +279,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -314,7 +314,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -349,7 +349,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -384,7 +384,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -419,7 +419,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -454,7 +454,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
@@ -489,7 +489,7 @@
                 </p>
                 <p class="absolute text-[0.625rem] right-2.5 bottom-[5px]">
                   <span
-                    class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
+                    class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-190px_-85px] transform translate-x-0.5 translate-y-2.5"
                   ></span>
                   <span class="sr-only">좋아요</span>
                   <span class="inline-block pl-0.5 pr-1 pt-0.5 pb-0">4</span>
