--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Super 4y 엔터이듬</title>
+    <link rel="icon" href="./../../assets/icons/favicon.ico" type="image/x-icon" sizes="16x16" />
     <link
       rel="stylesheet preload"
       as="style"
@@ -26,19 +27,19 @@
         <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
             ></span>
             <span class="sr-only">수신감도</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
             ></span>
             <span class="sr-only">데이터 종류</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
             ></span>
             <span class="sr-only">배터리 잔량</span>
           </li>
@@ -52,7 +53,7 @@
             for="headerSelect"
             class="absolute w-4/5 z-[-1] text-lg font-bold py-2 top-[0.1875rem]"
             >남가좌제2동<span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[0.3125rem]"
             ></span></label
           ><select
             id="headerSelect"
@@ -70,7 +71,7 @@
         <ul class="flex w-[86px] h-[26px] justify-evenly mt-3">
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[0.3125rem] mt-1"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[0.3125rem] mt-1"
               href="./search.html"
               aria-label="검색"
               tabindex="0"
@@ -78,7 +79,7 @@
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/hamburger.svg')] bg-no-repeat w-5 h-5 ml-[0.1875rem] mt-0.5"
+              class="inline-block bg-[url('./../../assets/icons/main_hamburger.svg')] bg-no-repeat w-5 h-5 ml-[0.1875rem] mt-0.5"
               href="#"
               aria-label="메뉴"
               tabindex="0"
@@ -86,7 +87,7 @@
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[0.3125rem] mt-1"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[0.3125rem] mt-1"
               href="#"
               aria-label="알림"
               tabindex="0"
@@ -109,7 +110,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[0px_-74px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[0px_-74px]"
             ></span>
             <span>홈</span>
           </a>
@@ -120,7 +121,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-72px_-46px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-72px_-46px]"
             ></span>
             <span>게시판</span>
           </a>
@@ -131,7 +132,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-106px_-91px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-106px_-91px]"
             ></span>
             <span>내 근처</span>
           </a>
@@ -142,7 +143,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-51px_-73px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-51px_-73px]"
             ></span>
             <span>채팅</span>
           </a>
@@ -153,7 +154,7 @@
             class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
           >
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-99px_-46px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-99px_-46px]"
             ></span>
             <span>나의 이름</span>
           </a>
@@ -172,11 +173,11 @@
           <!-- If we need navigation buttons -->
           <div
             class="swiper-button-prev w-10 h-10 bg-no-repeat bg-center z-[999]"
-            style="background-image: url('./../../assets/icons/Icon/Arrow.png')"
+            style="background-image: url('./../../assets/icons/main_arrow.png')"
           ></div>
           <div
             class="swiper-button-next w-10 h-10 bg-no-repeat bg-center z-[999] transform scale-[-1]"
-            style="background-image: url('./../../assets/icons/Icon/Arrow.png')"
+            style="background-image: url('./../../assets/icons/main_arrow.png')"
           ></div>
         </div>
         <div class="pagination_container flex justify-center top-[-25px] left-2 relative gap-3">
