--- a/client/views/main/productInfo.html
+++ b/client/views/main/productInfo.html
@@ -22,19 +22,19 @@
         <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">수신감도</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
             ></span>
             <span class="sr-only">데이터 종류</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">배터리 잔량</span>
           </li>
@@ -44,7 +44,7 @@
         <ul class="headerList flex w-[86px] h-[26px] justify-evenly mt-2">
           <li class="headerItem w-[25px] h-[25px]">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/dircetionLeft.svg')] bg-no-repeat w-5 h-5"
+              class="inline-block bg-[url('./../../assets/icons/main_left.svg')] bg-no-repeat w-5 h-5"
               aria-label="뒤로가기"
               href="#"
               onclick="history.back()"
@@ -53,7 +53,7 @@
           </li>
           <li class="headerItem w-[25px] h-[25px]">
             <a
-              class="sprite spriteHome inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-84px_-93px] ml-[-0.625rem]"
+              class="sprite spriteHome inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-84px_-93px] ml-[-0.625rem]"
               href="./main.html"
               aria-label="홈"
               tabindex="0"
@@ -63,7 +63,7 @@
         <ul class="headerList flex w-[86px] h-[26px] justify-evenly mt-2">
           <li class="headerItem w-[25px] h-[25px] pl-1.5">
             <a
-              class="sprite spriteShare inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-241px_-47px]"
+              class="sprite spriteShare inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-241px_-47px]"
               aria-label="공유"
               href="search.html"
               tabindex="0"
@@ -71,7 +71,7 @@
           </li>
           <li class="headerItem w-[25px] h-[25px]">
             <a
-              class="sprite spriteMore inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-254px_-255px] mr-3"
+              class="sprite spriteMore inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-254px_-255px] mr-3"
               href="/"
               aria-label="더보기"
               tabindex="0"
@@ -210,7 +210,7 @@
         <div class="flex gap-3 ml-3">
           <span
             aria-label="좋아요"
-            class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-77px_-229px] mt-1"
+            class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-77px_-229px] mt-1"
           ></span>
           <span class="w-[1px] h-[34px] bg-[#919191]"></span>
           <div class="flex flex-col justify-center">
