--- a/client/views/main/search.html
+++ b/client/views/main/search.html
@@ -23,19 +23,19 @@
         <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">수신감도</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
             ></span>
             <span class="sr-only">데이터 종류</span>
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
+              class="inline-block bg-[url('./../../assets/icons/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">배터리 잔량</span>
           </li>
@@ -48,7 +48,7 @@
         <div class="flex-shrink-0 mt-2">
           <span
             ><a
-              class="inline-block bg-[url('./../../assets/icons/Icon/dircetionLeft.svg')] bg-no-repeat w-[18px] h-[18px]"
+              class="inline-block bg-[url('./../../assets/icons/main_left.svg')] bg-no-repeat w-[18px] h-[18px]"
               href="javascript:history.back()"
             ></a
           ></span>
