--- a/client/views/start/category.html
+++ b/client/views/start/category.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>관심 영역 선택</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <!-- 상단 영역(시간, 배터리)
+      <!-- 상단 영역(시간, 배터리)
         <article>
             <header class="mainHeader locationHeader">
                 <h2 class="a11yHidden">기본 정보</h2>
@@ -30,106 +30,109 @@
                 </div>
             </header>
         </article>-->
-            <header class="categoryHeader">
-                <div class="img"><img src="./../images/direction_left.png" alt="왼쪽 화살표" class="categoryleft" />
-                </div>
-                <div class="searchContainer">
-                    <i tabindex="0" class="fa-sharp fa-solid fa-magnifying-glass"></i>
-                    <input type="text" placeholder="분야 (이름)로 검색 ( ex. 프론트)" class="Search" />
-                </div>
-            </header>
-            <main class="categoryMain">
-                <h2 class="MainTitle">관심분야를 선택해주세요!</h2>
-                <div class="buttonContaner">
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">프론트엔드</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">백 엔드</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">리액트</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="buttonChecked">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">풀스택</span>
-                        </span>
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">알고리즘</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">프로그래밍</span>
-                            <span class="buttonSubtitle">기초지식</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="buttonChecked">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">디자인</span>
-                            <span class="buttonSubtitle">UI디자인</span>
-                        </span>
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                    <button type="button" class="buttonChecked">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">디자인</span>
-                            <span class="buttonSubtitle">UX디자인</span>
-                        </span>
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                    <button type="button" class="buttonChecked">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">디자인</span>
-                            <span class="buttonSubtitle">UI * UX</span>
-                        </span>
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">데이터</span>
-                            <span class="buttonSubtitle">데이터분석</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">데이터</span>
-                            <span class="buttonSubtitle">통계분석</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                    <button type="button" class="button">
-                        <span class="buttonWrapper">
-                            <span class="buttonTitle">데이터</span>
-                            <span class="buttonSubTitle">시각화</span>
-                        </span>
-                        <i class="fa-solid fa-plus button__img"></i>
-                    </button>
-                </div>
-            </main>
-            <footer>
-                <button type="button" class="saveBtn" onclick= "location.href='signUp.html'">이대로 저장할래요</button>
-            </footer>
+      <header class="categoryHeader">
+        <div class="img">
+          <img src="./../../assets/icons/Arrow.png" alt="왼쪽 화살표" class="categoryleft" />
         </div>
-    </body>
+        <div class="searchContainer">
+          <i tabindex="0" class="fa-sharp fa-solid fa-magnifying-glass"></i>
+          <input type="text" placeholder="분야 (이름)로 검색 ( ex. 프론트)" class="Search" />
+        </div>
+      </header>
+      <main class="categoryMain">
+        <h2 class="MainTitle">관심분야를 선택해주세요!</h2>
+        <div class="buttonContaner">
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">프론트엔드</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">백 엔드</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">리액트</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="buttonChecked">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">풀스택</span>
+            </span>
+            <i class="fa-solid fa-check"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">알고리즘</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">프로그래밍</span>
+              <span class="buttonSubtitle">기초지식</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="buttonChecked">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">디자인</span>
+              <span class="buttonSubtitle">UI디자인</span>
+            </span>
+            <i class="fa-solid fa-check"></i>
+          </button>
+          <button type="button" class="buttonChecked">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">디자인</span>
+              <span class="buttonSubtitle">UX디자인</span>
+            </span>
+            <i class="fa-solid fa-check"></i>
+          </button>
+          <button type="button" class="buttonChecked">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">디자인</span>
+              <span class="buttonSubtitle">UI * UX</span>
+            </span>
+            <i class="fa-solid fa-check"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">데이터</span>
+              <span class="buttonSubtitle">데이터분석</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">데이터</span>
+              <span class="buttonSubtitle">통계분석</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+          <button type="button" class="button">
+            <span class="buttonWrapper">
+              <span class="buttonTitle">데이터</span>
+              <span class="buttonSubTitle">시각화</span>
+            </span>
+            <i class="fa-solid fa-plus button__img"></i>
+          </button>
+        </div>
+      </main>
+      <footer>
+        <button type="button" class="saveBtn" onclick="location.href='signUp.html'">
+          이대로 저장할래요
+        </button>
+      </footer>
+    </div>
+  </body>
 </html>
