--- a/client/css/main.css
+++ b/client/css/main.css
@@ -671,6 +671,10 @@ video {
   z-index: 999;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -766,6 +770,22 @@ video {
 
 .mt-\[0\.8125rem\] {
   margin-top: 0.8125rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[18px\] {
+  margin-bottom: 18px;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mt-\[3px\] {
+  margin-top: 3px;
 }
 
 .line-clamp-2 {
@@ -871,6 +891,10 @@ video {
   height: auto;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
 .max-h-\[60px\] {
   max-height: 60px;
 }
@@ -959,6 +983,10 @@ video {
   width: 100%;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .max-w-\[200px\] {
   max-width: 200px;
 }
@@ -1025,6 +1053,10 @@ video {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1145,6 +1177,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1156,6 +1192,10 @@ video {
 
 .border-0 {
   border-width: 0px;
+}
+
+.border-\[0\.5px\] {
+  border-width: 0.5px;
 }
 
 .border-b {
@@ -1198,6 +1238,11 @@ video {
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-b-\[\#bdbdbd\] {
@@ -1288,6 +1333,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FFFFFF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/dircetionLeft\.svg\'\)\] {
   background-image: url('./../../assets/icons/Icon/dircetionLeft.svg');
 }
@@ -1298,6 +1348,26 @@ video {
 
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/sprite\.svg\'\)\] {
   background-image: url('./../../assets/icons/Icon/sprite.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/hamburger\.svg\'\)\] {
+  background-image: url('./../../assets/icons/hamburger.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/sprite\.svg\'\)\] {
+  background-image: url('./../../assets/icons/sprite.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/dircetionLeft\.svg\'\)\] {
+  background-image: url('./../../assets/icons/dircetionLeft.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/main_hamburger\.svg\'\)\] {
+  background-image: url('./../../assets/icons/main_hamburger.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/main_left\.svg\'\)\] {
+  background-image: url('./../../assets/icons/main_left.svg');
 }
 
 .bg-\[-106px_-91px\] {
@@ -1366,6 +1436,10 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-\[-155px_-98px\] {
+  background-position: -155px -98px;
 }
 
 .bg-no-repeat {
@@ -1540,6 +1614,10 @@ video {
   padding-top: 0.75rem;
 }
 
+.pr-\[62px\] {
+  padding-right: 62px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1593,6 +1671,10 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .font-bold {
@@ -1694,6 +1776,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .opacity-0 {
