Sync: Pull and Merge
팀원들과 저장소 싱크를 맞추기 위한 커밋 입니다

--- a/client/views/start/index.html
+++ b/client/views/start/index.html
@@ -1,7 +1,8 @@
-햣<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko-KR">
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
     rel="icon"
@@ -9,11 +10,11 @@
     type="image/xml+svg"
     />
     <link rel="stylesheet" href="../../css/main.css" />
+    <script src="../../js/main.js" type="module"></script>
     <title>최초 랜딩 페이지</title>
 </head>
 <body> 
     <div class="wrapper flex justify-start items-stretch items-center flex-col flex-nowrap">
-        
         <article class="topBat w-[320px] h-[37px]">
             <!-- 상단 영역(시간, 배터리)
             <header class="mainHeader locationHeader">
@@ -56,8 +57,7 @@
                     </figcaption>
                 </figure>
             </main>
-            <section class="bottom flex justify-start items-stretch items-center
-            flex-col flex-nowrap"> <!--<section class="bottom">-->
+            <section class="bottom flex justify-start items-stretch items-center flex-col flex-nowrap"> <!--<section class="bottom">-->
                 <button class="startBtn w-full h-[34px] text-[white] text-[10.5px] mt-[150px] font-bold text-sm leading-[140%] mx-auto px-[100px] py-2 rounded-lg border-[none] bg-[#373F67]" 
                 type="button" onclick= "location.href='category.html'">시작하기</button> <!--<button class="startBtn" onclick= "location.href='category.html'">-->
                     <span class="bottomLine text-[10px] text-[#919191] mt-6 text-center">
