--- a/client/views/start/signup2.html
+++ b/client/views/start/signup2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en ">
+<html lang="ko-KR ">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
         rel="icon"
@@ -9,6 +10,7 @@
         type="image/xml+svg"
         />
         <link rel="stylesheet" href="../../css/main.css" />
+        <script src="../../js/main.js" type="module"></script>
         <title>인증페이지</title>
     </head>
 <body>
