--- a/client/views/start/signup.html
+++ b/client/views/start/signup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en ">
+<html lang="ko-KR ">
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
     rel="icon"
@@ -9,11 +10,11 @@
     type="image/xml+svg"
     />
     <link rel="stylesheet" href="../../css/main.css" />
+    <script src="../../js/main.js" type="module"></script>
     <title>회원가입</title>
 </head>
 <body>
     <div class="wrapper flex justify-start items-stretch items-center flex-col flex-nowrap">
-        
         <article class="topBat w-[320px] h-[37px]">
             <!-- 상단 영역(시간, 배터리)
             <header class="mainHeader locationHeader">
@@ -49,9 +50,9 @@
                 <span class="signUpInfoMore text-[10px] leading-[160%]">휴대폰 번호는 안전하게 보관되며 서로에게 공개되지 않아요.</span>
             </section>
             <main class="signUpMessage flex flex-col justify-start items-stretch gap-3 m-auto mt-[3px] mb-3 "><!--<section class="signUpMain__phone">-->
-                <input inputmode="tel" placeholder="휴대폰 번호(-없이 숫자만 입력)" class="inputSignUpMessege rounded leading-[150%] text-sm px-3 py-2 border-[0.5px] border-solid border-black flex-col flex-nowrap"/>
+                <input inputmode="tel" placeholder="휴대폰 번호(-없이 숫자만 입력)" class="inputSignUpMessage rounded leading-[150%] text-sm px-3 py-2 border-[0.5px] border-solid border-black flex-col flex-nowrap"/>
                 <!--<input inputmode="tel" placeholder="휴대폰 번호(-없이 숫자만 입력)" class="signUpMain__phoneNumber/>"-->
-                <button class="signUpMessageSend rounded leading-[150%] text-[#919191] text-sm font-semibold py-2 border-[0.5px] border-solid border-[#919191] bg-[#FFFFFF]" onclick= "location.href='signUp2.html'">인증문자 받기</button>
+                <button class="signUpMessageSend rounded leading-[150%] text-[#919191] text-sm font-semibold py-2 border-[0.5px] border-solid border-[#919191] bg-[#FFFFFF]" disabled>인증문자 받기</button>
             </main>
             <footer class="signUpFind text-[0.625rem] leading-[160%] text-center">
                 <span class="signUpfind">휴대폰 번호가 변경되었나요?</span>
@@ -59,5 +60,6 @@
             </footer>
         </div>
     </div>
+      
 </body>
 </html>
